// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ContactForm /> displays error messages in required fields on submit with empty fields 1`] = `
<section
  class="jsx-3910802960 container"
  data-testid="contactForm_container"
>
  <div
    class="jsx-3910802960 wrapper genericMargins"
  >
    <form
      aria-describedby="contactForm"
      class="jsx-3910802960"
      novalidate=""
    >
      <div
        class="jsx-2066762092 fieldWrapper"
      >
        <label
          class="jsx-2066762092 fontS"
          for="name"
        >
          Nome
           *
        </label>
        <input
          aria-describedby="nameErrorMessage"
          class="jsx-2066762092 fontS"
          data-error="true"
          data-testid="name"
          id="name"
          name="name"
          required=""
          title="name"
          type="text"
          value=""
        />
        <span
          class="jsx-2066762092 errorMessage fontXXS visible"
          data-testid="errorMessage_visible"
          id="nameErrorMessage"
        >
          Este campo é obrigatório. Por favor insira o seu primeiro e último nome
        </span>
      </div>
      <div
        class="jsx-2066762092 fieldWrapper"
      >
        <label
          class="jsx-2066762092 fontS"
          for="brand"
        >
          Marca/Negócio
        </label>
        <input
          class="jsx-2066762092 fontS"
          data-error="false"
          data-testid="brand"
          id="brand"
          name="brand"
          title="brand"
          type="text"
          value=""
        />
        <span
          class="jsx-2066762092 errorMessage fontXXS"
          data-testid="errorMessage_hidden"
        />
      </div>
      <div
        class="jsx-2066762092 fieldWrapper"
      >
        <label
          class="jsx-2066762092 fontS"
          for="email"
        >
          Email
           *
        </label>
        <input
          aria-describedby="emailErrorMessage"
          class="jsx-2066762092 fontS"
          data-error="true"
          data-testid="email"
          id="email"
          name="email"
          required=""
          title="email"
          type="email"
          value=""
        />
        <span
          class="jsx-2066762092 errorMessage fontXXS visible"
          data-testid="errorMessage_visible"
          id="emailErrorMessage"
        >
          Este campo é obrigatório. Por favor insira um endereço de email válido
        </span>
      </div>
      <div
        class="jsx-2066762092 fieldWrapper"
      >
        <label
          class="jsx-2066762092 fontS"
          for="subject"
        >
          Assunto
        </label>
        <input
          class="jsx-2066762092 fontS"
          data-error="false"
          data-testid="subject"
          id="subject"
          name="subject"
          title="subject"
          type="text"
          value=""
        />
        <span
          class="jsx-2066762092 errorMessage fontXXS"
          data-testid="errorMessage_hidden"
        />
      </div>
      <div
        class="jsx-2066762092 fieldWrapper textarea"
      >
        <label
          class="jsx-2066762092 fontS"
          for="message"
        >
          Mensagem
           *
        </label>
        <textarea
          aria-describedby="messageErrorMessage"
          class="jsx-2066762092 fontS"
          data-error="true"
          data-testid="message"
          id="message"
          name="message"
          required=""
          title="message"
        />
        <span
          class="jsx-2066762092 errorMessage fontXXS visible"
          data-testid="errorMessage_visible"
          id="messageErrorMessage"
        >
          Este campo é obrigatório. Por favor insira uma mensagem
        </span>
      </div>
      <div
        class="jsx-3983101691 buttonWrapper"
      >
        <div
          class="jsx-3983101691 buttonBackground alignCenter"
        >
          <button
            class="jsx-3983101691 button fontS"
            type="submit"
          >
            Enviar
          </button>
        </div>
      </div>
    </form>
  </div>
</section>
`;

exports[`<ContactForm /> lets fields be properly filled 1`] = `
<section
  class="jsx-3910802960 container"
  data-testid="contactForm_container"
>
  <div
    class="jsx-3910802960 wrapper genericMargins"
  >
    <form
      aria-describedby="contactForm"
      class="jsx-3910802960"
      novalidate=""
    >
      <div
        class="jsx-2066762092 fieldWrapper"
      >
        <label
          class="jsx-2066762092 fontS"
          for="name"
        >
          Nome
           *
        </label>
        <input
          aria-describedby="nameErrorMessage"
          class="jsx-2066762092 fontS"
          data-error="false"
          data-testid="name"
          id="name"
          name="name"
          required=""
          title="name"
          type="text"
          value="André Marques"
        />
        <span
          class="jsx-2066762092 errorMessage fontXXS"
          data-testid="errorMessage_hidden"
          id="nameErrorMessage"
        >
          Este campo é obrigatório. Por favor insira o seu primeiro e último nome
        </span>
      </div>
      <div
        class="jsx-2066762092 fieldWrapper"
      >
        <label
          class="jsx-2066762092 fontS"
          for="brand"
        >
          Marca/Negócio
        </label>
        <input
          class="jsx-2066762092 fontS"
          data-error="false"
          data-testid="brand"
          id="brand"
          name="brand"
          title="brand"
          type="text"
          value="Brand"
        />
        <span
          class="jsx-2066762092 errorMessage fontXXS"
          data-testid="errorMessage_hidden"
        />
      </div>
      <div
        class="jsx-2066762092 fieldWrapper"
      >
        <label
          class="jsx-2066762092 fontS"
          for="email"
        >
          Email
           *
        </label>
        <input
          aria-describedby="emailErrorMessage"
          class="jsx-2066762092 fontS"
          data-error="false"
          data-testid="email"
          id="email"
          name="email"
          required=""
          title="email"
          type="email"
          value="email@email.com"
        />
        <span
          class="jsx-2066762092 errorMessage fontXXS"
          data-testid="errorMessage_hidden"
          id="emailErrorMessage"
        >
          Este campo é obrigatório. Por favor insira um endereço de email válido
        </span>
      </div>
      <div
        class="jsx-2066762092 fieldWrapper"
      >
        <label
          class="jsx-2066762092 fontS"
          for="subject"
        >
          Assunto
        </label>
        <input
          class="jsx-2066762092 fontS"
          data-error="false"
          data-testid="subject"
          id="subject"
          name="subject"
          title="subject"
          type="text"
          value="Subject"
        />
        <span
          class="jsx-2066762092 errorMessage fontXXS"
          data-testid="errorMessage_hidden"
        />
      </div>
      <div
        class="jsx-2066762092 fieldWrapper textarea"
      >
        <label
          class="jsx-2066762092 fontS"
          for="message"
        >
          Mensagem
           *
        </label>
        <textarea
          aria-describedby="messageErrorMessage"
          class="jsx-2066762092 fontS"
          data-error="false"
          data-testid="message"
          id="message"
          name="message"
          required=""
          title="message"
        >
          Textarea field
        </textarea>
        <span
          class="jsx-2066762092 errorMessage fontXXS"
          data-testid="errorMessage_hidden"
          id="messageErrorMessage"
        >
          Este campo é obrigatório. Por favor insira uma mensagem
        </span>
      </div>
      <div
        class="jsx-3983101691 buttonWrapper"
      >
        <div
          class="jsx-3983101691 buttonBackground alignCenter"
        >
          <button
            class="jsx-3983101691 button fontS"
            type="submit"
          >
            Enviar
          </button>
        </div>
      </div>
    </form>
  </div>
</section>
`;

exports[`<ContactForm /> renders properly 1`] = `
<section
  class="jsx-3910802960 container"
  data-testid="contactForm_container"
>
  <div
    class="jsx-3910802960 wrapper genericMargins"
  >
    <form
      aria-describedby="contactForm"
      class="jsx-3910802960"
      novalidate=""
    >
      <div
        class="jsx-2066762092 fieldWrapper"
      >
        <label
          class="jsx-2066762092 fontS"
          for="name"
        >
          Nome
           *
        </label>
        <input
          aria-describedby="nameErrorMessage"
          class="jsx-2066762092 fontS"
          data-error="false"
          data-testid="name"
          id="name"
          name="name"
          required=""
          title="name"
          type="text"
          value=""
        />
        <span
          class="jsx-2066762092 errorMessage fontXXS"
          data-testid="errorMessage_hidden"
          id="nameErrorMessage"
        >
          Este campo é obrigatório. Por favor insira o seu primeiro e último nome
        </span>
      </div>
      <div
        class="jsx-2066762092 fieldWrapper"
      >
        <label
          class="jsx-2066762092 fontS"
          for="brand"
        >
          Marca/Negócio
        </label>
        <input
          class="jsx-2066762092 fontS"
          data-error="false"
          data-testid="brand"
          id="brand"
          name="brand"
          title="brand"
          type="text"
          value=""
        />
        <span
          class="jsx-2066762092 errorMessage fontXXS"
          data-testid="errorMessage_hidden"
        />
      </div>
      <div
        class="jsx-2066762092 fieldWrapper"
      >
        <label
          class="jsx-2066762092 fontS"
          for="email"
        >
          Email
           *
        </label>
        <input
          aria-describedby="emailErrorMessage"
          class="jsx-2066762092 fontS"
          data-error="false"
          data-testid="email"
          id="email"
          name="email"
          required=""
          title="email"
          type="email"
          value=""
        />
        <span
          class="jsx-2066762092 errorMessage fontXXS"
          data-testid="errorMessage_hidden"
          id="emailErrorMessage"
        >
          Este campo é obrigatório. Por favor insira um endereço de email válido
        </span>
      </div>
      <div
        class="jsx-2066762092 fieldWrapper"
      >
        <label
          class="jsx-2066762092 fontS"
          for="subject"
        >
          Assunto
        </label>
        <input
          class="jsx-2066762092 fontS"
          data-error="false"
          data-testid="subject"
          id="subject"
          name="subject"
          title="subject"
          type="text"
          value=""
        />
        <span
          class="jsx-2066762092 errorMessage fontXXS"
          data-testid="errorMessage_hidden"
        />
      </div>
      <div
        class="jsx-2066762092 fieldWrapper textarea"
      >
        <label
          class="jsx-2066762092 fontS"
          for="message"
        >
          Mensagem
           *
        </label>
        <textarea
          aria-describedby="messageErrorMessage"
          class="jsx-2066762092 fontS"
          data-error="false"
          data-testid="message"
          id="message"
          name="message"
          required=""
          title="message"
        />
        <span
          class="jsx-2066762092 errorMessage fontXXS"
          data-testid="errorMessage_hidden"
          id="messageErrorMessage"
        >
          Este campo é obrigatório. Por favor insira uma mensagem
        </span>
      </div>
      <div
        class="jsx-3983101691 buttonWrapper"
      >
        <div
          class="jsx-3983101691 buttonBackground alignCenter"
        >
          <button
            class="jsx-3983101691 button fontS"
            type="submit"
          >
            Enviar
          </button>
        </div>
      </div>
    </form>
  </div>
</section>
`;

exports[`<ContactForm /> renders properly in English 1`] = `
<section
  class="jsx-3910802960 container"
  data-testid="contactForm_container"
>
  <div
    class="jsx-3910802960 wrapper genericMargins"
  >
    <form
      aria-describedby="contactForm"
      class="jsx-3910802960"
      novalidate=""
    >
      <div
        class="jsx-2066762092 fieldWrapper"
      >
        <label
          class="jsx-2066762092 fontS"
          for="name"
        >
          Name
           *
        </label>
        <input
          aria-describedby="nameErrorMessage"
          class="jsx-2066762092 fontS"
          data-error="false"
          data-testid="name"
          id="name"
          name="name"
          required=""
          title="name"
          type="text"
          value=""
        />
        <span
          class="jsx-2066762092 errorMessage fontXXS"
          data-testid="errorMessage_hidden"
          id="nameErrorMessage"
        >
          This field is required. Please enter your first and last name
        </span>
      </div>
      <div
        class="jsx-2066762092 fieldWrapper"
      >
        <label
          class="jsx-2066762092 fontS"
          for="brand"
        >
          Brand/Business
        </label>
        <input
          class="jsx-2066762092 fontS"
          data-error="false"
          data-testid="brand"
          id="brand"
          name="brand"
          title="brand"
          type="text"
          value=""
        />
        <span
          class="jsx-2066762092 errorMessage fontXXS"
          data-testid="errorMessage_hidden"
        />
      </div>
      <div
        class="jsx-2066762092 fieldWrapper"
      >
        <label
          class="jsx-2066762092 fontS"
          for="email"
        >
          Email
           *
        </label>
        <input
          aria-describedby="emailErrorMessage"
          class="jsx-2066762092 fontS"
          data-error="false"
          data-testid="email"
          id="email"
          name="email"
          required=""
          title="email"
          type="email"
          value=""
        />
        <span
          class="jsx-2066762092 errorMessage fontXXS"
          data-testid="errorMessage_hidden"
          id="emailErrorMessage"
        >
          This field is required. Please enter a valid email address
        </span>
      </div>
      <div
        class="jsx-2066762092 fieldWrapper"
      >
        <label
          class="jsx-2066762092 fontS"
          for="subject"
        >
          Subject
        </label>
        <input
          class="jsx-2066762092 fontS"
          data-error="false"
          data-testid="subject"
          id="subject"
          name="subject"
          title="subject"
          type="text"
          value=""
        />
        <span
          class="jsx-2066762092 errorMessage fontXXS"
          data-testid="errorMessage_hidden"
        />
      </div>
      <div
        class="jsx-2066762092 fieldWrapper textarea"
      >
        <label
          class="jsx-2066762092 fontS"
          for="message"
        >
          Message
           *
        </label>
        <textarea
          aria-describedby="messageErrorMessage"
          class="jsx-2066762092 fontS"
          data-error="false"
          data-testid="message"
          id="message"
          name="message"
          required=""
          title="message"
        />
        <span
          class="jsx-2066762092 errorMessage fontXXS"
          data-testid="errorMessage_hidden"
          id="messageErrorMessage"
        >
          This field is required. Please enter a message
        </span>
      </div>
      <div
        class="jsx-3983101691 buttonWrapper"
      >
        <div
          class="jsx-3983101691 buttonBackground alignCenter"
        >
          <button
            class="jsx-3983101691 button fontS"
            type="submit"
          >
            Send
          </button>
        </div>
      </div>
    </form>
  </div>
</section>
`;

exports[`<ContactForm /> resets the form after it was successfully submitted 1`] = `
<section
  class="jsx-3910802960 container"
  data-testid="contactForm_container"
>
  <div
    class="jsx-3910802960 wrapper genericMargins"
  >
    <form
      aria-describedby="contactForm"
      class="jsx-3910802960"
      novalidate=""
    >
      <div
        class="jsx-2066762092 fieldWrapper"
      >
        <label
          class="jsx-2066762092 fontS"
          for="name"
        >
          Nome
           *
        </label>
        <input
          aria-describedby="nameErrorMessage"
          class="jsx-2066762092 fontS"
          data-error="false"
          data-testid="name"
          id="name"
          name="name"
          required=""
          title="name"
          type="text"
          value=""
        />
        <span
          class="jsx-2066762092 errorMessage fontXXS"
          data-testid="errorMessage_hidden"
          id="nameErrorMessage"
        >
          Este campo é obrigatório. Por favor insira o seu primeiro e último nome
        </span>
      </div>
      <div
        class="jsx-2066762092 fieldWrapper"
      >
        <label
          class="jsx-2066762092 fontS"
          for="brand"
        >
          Marca/Negócio
        </label>
        <input
          class="jsx-2066762092 fontS"
          data-error="false"
          data-testid="brand"
          id="brand"
          name="brand"
          title="brand"
          type="text"
          value=""
        />
        <span
          class="jsx-2066762092 errorMessage fontXXS"
          data-testid="errorMessage_hidden"
        />
      </div>
      <div
        class="jsx-2066762092 fieldWrapper"
      >
        <label
          class="jsx-2066762092 fontS"
          for="email"
        >
          Email
           *
        </label>
        <input
          aria-describedby="emailErrorMessage"
          class="jsx-2066762092 fontS"
          data-error="false"
          data-testid="email"
          id="email"
          name="email"
          required=""
          title="email"
          type="email"
          value=""
        />
        <span
          class="jsx-2066762092 errorMessage fontXXS"
          data-testid="errorMessage_hidden"
          id="emailErrorMessage"
        >
          Este campo é obrigatório. Por favor insira um endereço de email válido
        </span>
      </div>
      <div
        class="jsx-2066762092 fieldWrapper"
      >
        <label
          class="jsx-2066762092 fontS"
          for="subject"
        >
          Assunto
        </label>
        <input
          class="jsx-2066762092 fontS"
          data-error="false"
          data-testid="subject"
          id="subject"
          name="subject"
          title="subject"
          type="text"
          value=""
        />
        <span
          class="jsx-2066762092 errorMessage fontXXS"
          data-testid="errorMessage_hidden"
        />
      </div>
      <div
        class="jsx-2066762092 fieldWrapper textarea"
      >
        <label
          class="jsx-2066762092 fontS"
          for="message"
        >
          Mensagem
           *
        </label>
        <textarea
          aria-describedby="messageErrorMessage"
          class="jsx-2066762092 fontS"
          data-error="false"
          data-testid="message"
          id="message"
          name="message"
          required=""
          title="message"
        />
        <span
          class="jsx-2066762092 errorMessage fontXXS"
          data-testid="errorMessage_hidden"
          id="messageErrorMessage"
        >
          Este campo é obrigatório. Por favor insira uma mensagem
        </span>
      </div>
      <div
        class="jsx-3983101691 buttonWrapper"
      >
        <div
          class="jsx-3983101691 buttonBackground alignCenter"
        >
          <button
            class="jsx-3983101691 button fontS"
            type="submit"
          >
            Enviar
          </button>
        </div>
      </div>
    </form>
  </div>
</section>
`;

exports[`<ContactForm /> shows an error message in case the POST request fails 1`] = `
<section
  class="jsx-3910802960 container"
  data-testid="contactForm_container"
>
  <div
    class="jsx-3910802960 wrapper genericMargins"
  >
    <form
      aria-describedby="contactForm"
      class="jsx-3910802960"
      novalidate=""
    >
      <div
        class="jsx-2066762092 fieldWrapper"
      >
        <label
          class="jsx-2066762092 fontS"
          for="name"
        >
          Nome
           *
        </label>
        <input
          aria-describedby="nameErrorMessage"
          class="jsx-2066762092 fontS"
          data-error="false"
          data-testid="name"
          id="name"
          name="name"
          required=""
          title="name"
          type="text"
          value="André Marques"
        />
        <span
          class="jsx-2066762092 errorMessage fontXXS"
          data-testid="errorMessage_hidden"
          id="nameErrorMessage"
        >
          Este campo é obrigatório. Por favor insira o seu primeiro e último nome
        </span>
      </div>
      <div
        class="jsx-2066762092 fieldWrapper"
      >
        <label
          class="jsx-2066762092 fontS"
          for="brand"
        >
          Marca/Negócio
        </label>
        <input
          class="jsx-2066762092 fontS"
          data-error="false"
          data-testid="brand"
          id="brand"
          name="brand"
          title="brand"
          type="text"
          value="Brand"
        />
        <span
          class="jsx-2066762092 errorMessage fontXXS"
          data-testid="errorMessage_hidden"
        />
      </div>
      <div
        class="jsx-2066762092 fieldWrapper"
      >
        <label
          class="jsx-2066762092 fontS"
          for="email"
        >
          Email
           *
        </label>
        <input
          aria-describedby="emailErrorMessage"
          class="jsx-2066762092 fontS"
          data-error="false"
          data-testid="email"
          id="email"
          name="email"
          required=""
          title="email"
          type="email"
          value="email@email.com"
        />
        <span
          class="jsx-2066762092 errorMessage fontXXS"
          data-testid="errorMessage_hidden"
          id="emailErrorMessage"
        >
          Este campo é obrigatório. Por favor insira um endereço de email válido
        </span>
      </div>
      <div
        class="jsx-2066762092 fieldWrapper"
      >
        <label
          class="jsx-2066762092 fontS"
          for="subject"
        >
          Assunto
        </label>
        <input
          class="jsx-2066762092 fontS"
          data-error="false"
          data-testid="subject"
          id="subject"
          name="subject"
          title="subject"
          type="text"
          value="Subject"
        />
        <span
          class="jsx-2066762092 errorMessage fontXXS"
          data-testid="errorMessage_hidden"
        />
      </div>
      <div
        class="jsx-2066762092 fieldWrapper textarea"
      >
        <label
          class="jsx-2066762092 fontS"
          for="message"
        >
          Mensagem
           *
        </label>
        <textarea
          aria-describedby="messageErrorMessage"
          class="jsx-2066762092 fontS"
          data-error="false"
          data-testid="message"
          id="message"
          name="message"
          required=""
          title="message"
        >
          Textarea field
        </textarea>
        <span
          class="jsx-2066762092 errorMessage fontXXS"
          data-testid="errorMessage_hidden"
          id="messageErrorMessage"
        >
          Este campo é obrigatório. Por favor insira uma mensagem
        </span>
      </div>
      <div
        class="jsx-3983101691 buttonWrapper"
      >
        <div
          class="jsx-3983101691 buttonBackground alignCenter disabled"
        >
          <button
            class="jsx-3983101691 button fontS"
            type="submit"
          >
            Enviar
          </button>
        </div>
      </div>
      <span
        class="jsx-3910802960 formNotification fontS error"
        id="contactForm"
      >
        Ocorreu um erro no envio da mensagem. Tente outra vez mais tarde ou entre em contacto através do meu email 
        <a
          class="link"
          href="mailto:catarina@aguareladigital.com"
        >
          catarina@aguareladigital.com
        </a>
      </span>
    </form>
  </div>
</section>
`;

exports[`<ContactForm /> submits the form successfully 1`] = `
<section
  class="jsx-3910802960 container"
  data-testid="contactForm_container"
>
  <div
    class="jsx-3910802960 wrapper genericMargins"
  >
    <form
      aria-describedby="contactForm"
      class="jsx-3910802960"
      novalidate=""
    >
      <div
        class="jsx-2066762092 fieldWrapper"
      >
        <label
          class="jsx-2066762092 fontS"
          for="name"
        >
          Nome
           *
        </label>
        <input
          aria-describedby="nameErrorMessage"
          class="jsx-2066762092 fontS"
          data-error="false"
          data-testid="name"
          id="name"
          name="name"
          required=""
          title="name"
          type="text"
          value="André Marques"
        />
        <span
          class="jsx-2066762092 errorMessage fontXXS"
          data-testid="errorMessage_hidden"
          id="nameErrorMessage"
        >
          Este campo é obrigatório. Por favor insira o seu primeiro e último nome
        </span>
      </div>
      <div
        class="jsx-2066762092 fieldWrapper"
      >
        <label
          class="jsx-2066762092 fontS"
          for="brand"
        >
          Marca/Negócio
        </label>
        <input
          class="jsx-2066762092 fontS"
          data-error="false"
          data-testid="brand"
          id="brand"
          name="brand"
          title="brand"
          type="text"
          value="Brand"
        />
        <span
          class="jsx-2066762092 errorMessage fontXXS"
          data-testid="errorMessage_hidden"
        />
      </div>
      <div
        class="jsx-2066762092 fieldWrapper"
      >
        <label
          class="jsx-2066762092 fontS"
          for="email"
        >
          Email
           *
        </label>
        <input
          aria-describedby="emailErrorMessage"
          class="jsx-2066762092 fontS"
          data-error="false"
          data-testid="email"
          id="email"
          name="email"
          required=""
          title="email"
          type="email"
          value="email@email.com"
        />
        <span
          class="jsx-2066762092 errorMessage fontXXS"
          data-testid="errorMessage_hidden"
          id="emailErrorMessage"
        >
          Este campo é obrigatório. Por favor insira um endereço de email válido
        </span>
      </div>
      <div
        class="jsx-2066762092 fieldWrapper"
      >
        <label
          class="jsx-2066762092 fontS"
          for="subject"
        >
          Assunto
        </label>
        <input
          class="jsx-2066762092 fontS"
          data-error="false"
          data-testid="subject"
          id="subject"
          name="subject"
          title="subject"
          type="text"
          value="Subject"
        />
        <span
          class="jsx-2066762092 errorMessage fontXXS"
          data-testid="errorMessage_hidden"
        />
      </div>
      <div
        class="jsx-2066762092 fieldWrapper textarea"
      >
        <label
          class="jsx-2066762092 fontS"
          for="message"
        >
          Mensagem
           *
        </label>
        <textarea
          aria-describedby="messageErrorMessage"
          class="jsx-2066762092 fontS"
          data-error="false"
          data-testid="message"
          id="message"
          name="message"
          required=""
          title="message"
        >
          Textarea field
        </textarea>
        <span
          class="jsx-2066762092 errorMessage fontXXS"
          data-testid="errorMessage_hidden"
          id="messageErrorMessage"
        >
          Este campo é obrigatório. Por favor insira uma mensagem
        </span>
      </div>
      <div
        class="jsx-3983101691 buttonWrapper"
      >
        <div
          class="jsx-3983101691 buttonBackground alignCenter disabled"
        >
          <button
            class="jsx-3983101691 button fontS"
            type="submit"
          >
            Enviar
          </button>
        </div>
      </div>
      <span
        class="jsx-3910802960 formNotification fontS"
        id="contactForm"
      >
        Mensagem enviada com sucesso.
      </span>
    </form>
  </div>
</section>
`;
